# haskell-mnist

./: .gitignore  LICENSE  README.md  haskell-mnist.cabal  requirements.txt  stack.yaml
app/: Main.hs
paper/: main.tex  references.bib
results/: confusion-matrix.csv  training-log.md  training-metrics.csv
scratch/: DimensionError.hs
scripts/: plot_results.py
src/: Activation.hs  Init.hs  Layer.hs  Loss.hs  MNIST.hs  Mat.hs  Network.hs  Train.hs  Vec.hs
test/: Spec.hs
